# cargo-set

./: Cargo.toml  README.md
crates/cargo-set-lib/: Cargo.toml
crates/cargo-set-lib/src/: cargo.rs  filesystem.rs  lib.rs
src/: cargo.rs  commands.rs  main.rs
