[package]
name = "cargo-set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = { version = "0.7.4", features = ["preserve_order"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
