[workspace]
members = ["crates/cargo-set-lib"]

[workspace.dependencies]
cargo-set-lib = { path = "crates/cargo-set-lib" }

anyhow = "1.0.71"
cargo_toml = "0.15.2"
tracing = { version = "0.1.37", features = ["log"] }

[package]
name = "cargo-set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.3.0", features = ["derive"] }
tracing-subscriber = "0.3.17"

anyhow.workspace = true
cargo_toml.workspace = true
tracing.workspace = true
