[package]
name = "cargo-set-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cargo_toml.workspace = true
serde = "1.0.163"
toml = { version = "0.7.4", features = ["preserve_order"] }
tracing.workspace = true
